# Yaqeen

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MARKDOWN_GUIDE.md  README.md  TESTING.md  package-lock.json  package.json  quick-test.sh
.github/workflows/: deploy-docs.yml
docs/: README.md  SUMMARY.md  book.json  book.json.backup
docs/advanced/: ci-cd.md  configuration.md
docs/api/: library-usage.md
docs/development/: architecture.md
docs/docs-vuepress/: package-lock.json
docs/docs-vuepress/docs/: package.json
docs/docs-vuepress/docs/src/: index.md
docs/getting-started/: first-project.md  installation.md  quick-start.md
docs/templates/: custom-templates.md  overview.md
docs/usage/: cli-reference.md  interactive-mode.md  markdown-format.md  templates.md
src/: main.cpp
src/core/: generator.cpp  parser.cpp  template_manager.cpp
src/ui/: animations.cpp  progress.cpp  theme.cpp
src/utils/: error.cpp  logger.cpp  validators.cpp
templates/backend/: aspnet-core.json  django.json  express.json  fastapi.json  go-gin.json  laravel.json  nestjs.json  rails.json  rust-actix.json  spring-boot.json
templates/languages/: cpp-project.json  go-project.json  java-maven.json  python-project.json  rust-project.json
templates/mobile/: flutter.json  react-native.json
templates/other/: documentation.json  library.json  monorepo.json
templates/patterns/: clean-architecture.json  ddd.json  event-driven.json  hexagonal.json  microservices.json  mvc.json  mvvm.json  service-repository.json
templates/web/: angular.json  astro.json  nextjs.json  react-typescript.json  solidjs.json  svelte.json  vue3.json
tests/: test_generator.cpp  test_parser.cpp  test_templates.cpp
